// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRecipient should render 1`] = `
<div>
  <div
    class="sc-fzoyAV crGsrt"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="sc-AxjAm BsmvP flex-1"
          color="primary"
          data-testid="add-recipient-is-single-toggle"
          type="button"
        >
          Single
        </button>
        <button
          class="sc-AxjAm joLCoM flex-1 border-l-0"
          color="primary"
          data-testid="add-recipient-is-multiple-toggle"
          type="button"
        >
          Multiple
        </button>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 gIKSHW mt-6"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="sc-AxirZ izhStr relative mt-1"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="recipientAddress"
            >
              Recipient
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div>
            <div
              class="relative flex items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="sc-fzpans cnoTTh mx-3 bg-theme-neutral-200 border-theme-neutral-300 dark:border-theme-neutral-800"
                />
              </div>
              <input
                class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-14 pr-11"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value=""
              />
              <div
                class="absolute flex items-center space-x-3 cursor-pointer right-4"
                data-testid="SelectRecipient__select-recipient"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="sc-Axmtr jzhOwR"
          >
            <input
              class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-20"
              data-testid="add-recipient__amount-input"
              name="amount"
              placeholder="Amount"
              type="text"
              value=""
            />
            <div
              class="sc-AxhUy sc-AxheI bYHtKZ"
            >
              <button
                class="h-12 pl-6 pr-3 mr-1 text-theme-primary focus:outline-none"
                data-testid="add-recipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render with multiple recipients tab 1`] = `
<div>
  <div
    class="sc-fzoyAV crGsrt"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="sc-AxjAm joLCoM flex-1"
          color="primary"
          data-testid="add-recipient-is-single-toggle"
          type="button"
        >
          Single
        </button>
        <button
          class="sc-AxjAm BsmvP flex-1 border-l-0"
          color="primary"
          data-testid="add-recipient-is-multiple-toggle"
          type="button"
        >
          Multiple
        </button>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 jZidsI mt-6"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="sc-AxirZ izhStr relative mt-1"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="recipientAddress"
            >
              Recipient #1
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div>
            <div
              class="relative flex items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="sc-fzpans cnoTTh mx-3 bg-theme-neutral-200 border-theme-neutral-300 dark:border-theme-neutral-800"
                />
              </div>
              <input
                class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-14 pr-11"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value=""
              />
              <div
                class="absolute flex items-center space-x-3 cursor-pointer right-4"
                data-testid="SelectRecipient__select-recipient"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="sc-Axmtr jzhOwR"
          >
            <input
              class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-20"
              data-testid="add-recipient__amount-input"
              name="amount"
              placeholder="Amount"
              type="text"
              value=""
            />
            <div
              class="sc-AxhUy sc-AxheI bYHtKZ"
            >
              <button
                class="h-12 pl-6 pr-3 mr-1 text-theme-primary focus:outline-none"
                data-testid="add-recipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render with single recipient data 1`] = `
<div>
  <div
    class="sc-fzoyAV crGsrt"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="sc-AxjAm BsmvP flex-1"
          color="primary"
          data-testid="add-recipient-is-single-toggle"
          type="button"
        >
          Single
        </button>
        <button
          class="sc-AxjAm joLCoM flex-1 border-l-0"
          color="primary"
          data-testid="add-recipient-is-multiple-toggle"
          type="button"
        >
          Multiple
        </button>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 gIKSHW mt-6"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="sc-AxirZ izhStr relative mt-1"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="recipientAddress"
            >
              Recipient
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div>
            <div
              class="relative flex items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 bXyrQO mx-3"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                      title="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                    />
                  </div>
                </div>
              </div>
              <input
                class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-14 pr-11"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
              />
              <div
                class="absolute flex items-center space-x-3 cursor-pointer right-4"
                data-testid="SelectRecipient__select-recipient"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="sc-Axmtr jzhOwR"
          >
            <input
              class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-20"
              data-testid="add-recipient__amount-input"
              name="amount"
              placeholder="Amount"
              type="text"
              value="10000000000"
            />
            <div
              class="sc-AxhUy sc-AxheI bYHtKZ"
            >
              <button
                class="h-12 pl-6 pr-3 mr-1 text-theme-primary focus:outline-none"
                data-testid="add-recipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render without recipients 1`] = `
<div>
  <div
    class="sc-fzoyAV crGsrt"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="sc-AxjAm BsmvP flex-1"
          color="primary"
          data-testid="add-recipient-is-single-toggle"
          type="button"
        >
          Single
        </button>
        <button
          class="sc-AxjAm joLCoM flex-1 border-l-0"
          color="primary"
          data-testid="add-recipient-is-multiple-toggle"
          type="button"
        >
          Multiple
        </button>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 gIKSHW mt-6"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="sc-AxirZ izhStr relative mt-1"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="recipientAddress"
            >
              Recipient
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div>
            <div
              class="relative flex items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="sc-fzpans cnoTTh mx-3 bg-theme-neutral-200 border-theme-neutral-300 dark:border-theme-neutral-800"
                />
              </div>
              <input
                class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-14 pr-11"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value=""
              />
              <div
                class="absolute flex items-center space-x-3 cursor-pointer right-4"
                data-testid="SelectRecipient__select-recipient"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="sc-Axmtr jzhOwR"
          >
            <input
              class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-20"
              data-testid="add-recipient__amount-input"
              name="amount"
              placeholder="Amount"
              type="text"
              value=""
            />
            <div
              class="sc-AxhUy sc-AxheI bYHtKZ"
            >
              <button
                class="h-12 pl-6 pr-3 mr-1 text-theme-primary focus:outline-none"
                data-testid="add-recipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should set available amount 1`] = `
<div>
  <div
    class="sc-fzoyAV crGsrt"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="sc-AxjAm BsmvP flex-1"
          color="primary"
          data-testid="add-recipient-is-single-toggle"
          type="button"
        >
          Single
        </button>
        <button
          class="sc-AxjAm joLCoM flex-1 border-l-0"
          color="primary"
          data-testid="add-recipient-is-multiple-toggle"
          type="button"
        >
          Multiple
        </button>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 gIKSHW mt-6"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="sc-AxirZ izhStr relative mt-1"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
              data-testid="FormLabel"
              for="recipientAddress"
            >
              Recipient
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div>
            <div
              class="relative flex items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="sc-fzpans cnoTTh mx-3 bg-theme-neutral-200 border-theme-neutral-300 dark:border-theme-neutral-800"
                />
              </div>
              <input
                class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pl-14 pr-11"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value=""
              />
              <div
                class="absolute flex items-center space-x-3 cursor-pointer right-4"
                data-testid="SelectRecipient__select-recipient"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="sc-Axmtr jzhOwR"
          >
            <input
              class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 pr-20"
              data-testid="add-recipient__amount-input"
              name="amount"
              placeholder="Amount"
              type="text"
              value="8.00000000"
            />
            <div
              class="sc-AxhUy sc-AxheI bYHtKZ"
            >
              <button
                class="h-12 pl-6 pr-3 mr-1 text-theme-primary focus:outline-none"
                data-testid="add-recipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;
